# project_online_store

./: .gitignore  data.json  groups.json  pyproject.toml  readme.md  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/functions/: utils.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_is_published.py
blog/templates/blog/: base_generic.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  asgi.py  forms.py  mixins.py  models.py  services.py  settings.py  urls.py  views.py  wsgi.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_contact.py  0005_alter_category_options_alter_contact_options_and_more.py  0006_version.py  0007_alter_version_options.py  0008_product_owner.py  0009_alter_product_options_product_is_published.py
catalog/templates/blog/: blogpost_confirm_delete.html  blogpost_list.html
catalog/templates/main/: base.html  category_list.html  contacts.html  create_product.html  home.html  index.html  per_page.html  product_confirm_delete.html  product_detail.html  product_form.html  products.html  (+3 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: catalog_data.json  data.json  data1.json
main/: urls.py
media/product_images/: S23_CATEROGY_IMAGE_2 (1).avif
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py
(+7 files in other folders)
